--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   ],
   "dependencies": {
     "@types/lodash": "^4.14.196",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^9.0.2",
     "tsc-alias": "^1.8.7",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
