--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A lib provide base classes for DDD",
   "main": "dist/index.js",
   "scripts": {
+    "example": "ts-node -r tsconfig-paths/register src/example/index",
     "build": "npx tsc --project tsconfig.json && tsc-alias -p tsconfig.json"
   },
   "repository": {
@@ -21,10 +22,13 @@
   "dependencies": {
     "@types/lodash": "^4.14.196",
     "lodash": "^4.17.21",
+    "reflect-metadata": "^0.1.13",
+    "type-fest": "^4.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.2",
+    "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.7",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.6"
